deploy/discourse.yaml
apiVersion: v1
kind: Service
metadata:
  name: discourse
  namespace: discourse
spec:
  selector:
    app: discourse
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: discourse
      protocol: TCP
      port: 8080
      targetPort: 80
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
      # nodePort:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discourse
  namespace: discourse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discourse
  template:
    metadata:
      labels:
        app: discourse
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: discourse
          image: docker.io/ngeorger/discourse-web-only:working
          command: ["/sbin/boot"]
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              memory: 2Gi
              cpu: 1200m
            requests:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - mountPath: /shared
              name: shared
            - mountPath: /var/log
              name: var-log
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3

      volumes:
        - name: shared
          hostPath:
            path: /var/discourse/shared/web-only
        - name: var-log
          hostPath:
            path: /var/discourse/shared/web-only/log/var-log
