deploy/postgres13.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: discourse
spec:
  selector:
    app: postgres
  type: ClusterIP
  # sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
      # nodePort:
---
apiVersion: apps/v1
kind: StatefulSet
# Only schedule pods on nodes with specific hostname "mb-air".
metadata:
  name: postgres
  namespace: discourse
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  template:
    metadata:
      name: discourse-postgresql
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.10-bullseye # postgres:latest
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 5432
              name: tcp-postgresql
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          # Create your configmap using the according template with the following command:
          # kubectl create configmap postgres-config --from-file=deploy/postgres.env
      volumes:
        - name: data
          hostPath:
            path: /root/data-postgres
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
